[gd_scene load_steps=14 format=2]

[ext_resource path="res://input/Input.gd" type="Script" id=1]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://fonts/plex_mono_28.tres" type="DynamicFont" id=4]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://GameInfo.tscn" type="PackedScene" id=8]
[ext_resource path="res://SidePanel.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.286275, 0.286275, 0.286275, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 2 )

[node name="RoomManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="BackOfInn" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 839.0
margin_top = -394.0
margin_right = 1089.0
margin_bottom = -37.0
room_name = "prope cauponam"
name_inflections = {
"abl": "caupona propinqua",
"acc": "cauponam propinquam",
"dat": "cauponae propinquae",
"gen": "cauponae propinquae",
"loc": "",
"nom": "caupona propinqua",
"voc": ""
}
into_preposition = "post "
room_description = "Cistae aliaeque res, quibus caupo ipse nunc utitur, iacent passim.

A septentrionibus in cauponam ianua, alibi semita quaedam ad pagum ducens."

[node name="StartingShed" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 1104.0
margin_top = -306.0
margin_right = 1354.0
margin_bottom = -106.0
room_name = "tugurium"
name_inflections = {
"abl": "tugurio",
"acc": "tugurium",
"dat": "tugurio",
"gen": "tugurii",
"loc": "",
"nom": "tugurium",
"voc": ""
}
into_preposition = "in "
room_description = "Aedificium quoddam cauponae instar uidetur. 

Ianua ad cauponam arcaeque aliquae ab occidente."

[node name="InnKitchen" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 837.0
margin_top = -751.0
margin_right = 1087.0
margin_bottom = -419.0
room_name = "the inn's kitchen"
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "the kitchen of the inn. The cook isn't anywhere to be found - the room is empty, but a stew is cooking over the hearth. There is a door on the south wall that seems to go outside, and a door to the north back to the inn proper."

[node name="InnInside" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 838.0
margin_top = -1216.0
margin_right = 1088.0
margin_bottom = -794.0
room_name = "the inn"
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "the main area inside the inn. There are a few nondescript villagers drinking at tables around the room, but it isn't busy at the moment. The innkeeper is standing behind the bar, waiting to serve customers. There is a door to the kitchen to the south, and a door back to the village square to the west."

[node name="InnDoor" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 536.0
margin_top = -1114.0
margin_right = 786.0
margin_bottom = -914.0
room_name = "the inn's entrance"
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "the main entrance to the inn. A sign outside says \"The Swooping Heron.\""

[node name="VillageSquare" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 258.0
margin_top = -1141.0
margin_right = 508.0
margin_bottom = -884.0
room_name = "Village Square"
name_inflections = {
"abl": "abl",
"acc": "acc",
"dat": "dat",
"gen": "gen",
"loc": "loc",
"nom": "nom",
"voc": "voc"
}
into_preposition = "ad "
room_description = "the main square of the village. To the south is the shed and back of the inn. The main inn door is to the east, and there is a field to the west."

[node name="Field" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = -13.0
margin_top = -1131.0
margin_right = 237.0
margin_bottom = -888.0
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "a field of grass and flowers next to the village. The village is back to the east."

[node name="Gate" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 260.0
margin_top = -1390.0
margin_right = 510.0
margin_bottom = -1161.0
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "the town gate. It leads out to the forest to the north. A guard stands nearby watching everyone who comes by. The village is back towards the south."

[node name="Forest" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 260.0
margin_top = -1633.0
margin_right = 510.0
margin_bottom = -1418.0
name_inflections = {
"abl": "",
"acc": "",
"dat": "",
"gen": "",
"loc": "",
"nom": "",
"voc": ""
}
room_description = "the forest outside of town. Congratulations! You've made it out of the town."

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer/Columns"]
margin_right = 644.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GameInfo" parent="Background/MarginContainer/Columns/Rows" instance=ExtResource( 8 )]
margin_right = 644.0

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Columns/Rows"]
margin_top = 500.0
margin_right = 644.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Columns/Rows/InputArea"]
margin_right = 644.0
margin_bottom = 60.0

[node name="Carot" type="Label" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer"]
margin_top = 11.0
margin_right = 51.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer"]
margin_left = 55.0
margin_right = 644.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
max_length = 48
script = ExtResource( 1 )

[node name="SidePanel" parent="Background/MarginContainer/Columns" instance=ExtResource( 9 )]
margin_left = 664.0

[connection signal="text_entered" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
